--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <!-- 3‑D canvas (replace with your own Three.js scene) -->
     <canvas id="modelCanvas" aria-hidden="true"></canvas>
     <!-- Static image fallback for no‑WebGL devices -->
-    <img src="fallback.jpg" alt="Signature 3‑D model" class="fallback-hero-image" />
+    <img src="fallback.jpg"  class="fallback-hero-image" />
 
     <div class="overlay" aria-hidden="true"></div>
 
     <div class="content">
-      <h1 class="logo">YourName<span class="accent">3D</span></h1>
-      <p class="tagline">Mechanical & Concept 3‑D Art That Ships</p>
+      <h1 class="logo">J_I_N<span class="accent">3D</span></h1>
+      <p class="tagline">Welcome to the design gallery</p>
       <a href="#gallery" class="cta primary">Browse&nbsp;Models</a>
       <a href="#contact" class="cta secondary">Contact</a>
     </div>
@@ -73,19 +73,19 @@
     <div class="stat"><span class="number">5+</span><span class="label">Years&nbsp;Experience</span></div>
     <div class="stat"><span class="number">8</span><span class="label">Software&nbsp;Mastered</span></div>
     <div class="stat"><span class="number">120k</span><span class="label">Model&nbsp;Views</span></div>
-    <div class="stat"><span class="number">15</span><span class="label">Brands&nbsp;Served</span></div>
+   
   </section>
     <!-- ===== Featured Projects Carousel ===== -->
   <section class="projects" aria-label="Featured 3‑D models">
     <h2 class="section-title">Featured&nbsp;Projects</h2>
     <div class="carousel" id="carousel">
       <div class="slide active">
-        <img src="project1.jpg" alt="Project 1 render" />
-        <h3 class="proj-title">Pump Assembly</h3>
+        <img src="project torroid propeller.jpg" alt="Project 1 render" />
+        <h3 class="proj-title">Torroid propoller</h3>
       </div>
-      <div class="slide">
-        <img src="project2.jpg" alt="Project 2 render" />
-        <h3 class="proj-title">Concept Drone</h3>
+      <div class="slide active">
+        <img src="toggle clamp assembly.jpg" alt="Project 2 render" />
+        <h3 class="proj-title">Toggle clamp assembly</h3>
       </div>
       <div class="slide">
         <img src="project3.jpg" alt="Project 3 render" />
@@ -124,35 +124,34 @@
 <!-- ===== Interactive Gallery Grid ===== -->
 <section class="gallery" id="gallery" aria-label="3D Model Gallery">
   <h2 class="section-title">Interactive&nbsp;Gallery</h2>
-  <div class="grid">
+ <a href="project1.html" class="grid-item">
+  <img src="project torroid propeller.jpg" alt="project torroid propeller" />
+ </a>
     <div class="grid-item">
-      <img src="gallery1.jpg" alt="3D Model 1" />
+      <img src="toggle clamp assembly.jpg" alt="3D Model 2" />
       <div class="overlay">
-        <p>Pump Cross-Section</p>
+        <p>Toggle clamp assembly</p>
       </div>
     </div>
-    <div class="grid-item">
-      <img src="gallery2.jpg" alt="3D Model 2" />
-      <div class="overlay">
-        <p>Pressure Vessel</p>
-      </div>
-    </div>
+	<!--
     <div class="grid-item">
       <img src="gallery3.jpg" alt="3D Model 3" />
       <div class="overlay">
-        <p>Custom Valve Design</p>
+        <p>None</p>
       </div>
     </div>
     <div class="grid-item">
       <img src="gallery4.jpg" alt="3D Model 4" />
       <div class="overlay">
-        <p>Futuristic Drone</p>
+        <p>None</p>
       </div>
     </div>
+	-->
   </div>
 </section>
 <!-- ===== Testimonials Slider ===== -->
-<section class="testimonials" aria-label="Client Testimonials">
+<!--
+<section class="testimonials" aria-label="Client Testimonials">##
   <h2 class="section-title">What&nbsp;Clients&nbsp;Say</h2>
   <div class="testimonial-slider">
     <div class="testimonial active">
@@ -171,6 +170,7 @@
     <button class="testimonial-nav next" aria-label="Next testimonial">&#10095;</button>
   </div>
 </section>
+-->
 <script>
   const testimonials = document.querySelectorAll('.testimonial');
   const nextBtn = document.querySelector('.testimonial-nav.next');
@@ -217,10 +217,9 @@
         <span class="badge">SolidWorks</span>
         <span class="badge">AutoCAD</span>
         <span class="badge">Fusion 360</span>
-        <span class="badge">KeyShot</span>
+        <span class="badge">Inventor Professional</span>
         <span class="badge">Piping Design</span>
-        <span class="badge">Render Optimization</span>
-        <span class="badge">3D Animation</span>
+        <span class="badge">Watergems</span>
         <span class="badge">glTF / WebGL</span>
       </div>
     </div>
@@ -241,7 +240,7 @@
 <!-- ===== Footer ===== -->
 <footer class="site-footer" aria-label="Footer">
   <div class="footer-content">
-    <p class="footer-logo">YourName<span class="accent">3D</span></p>
+    <p class="footer-logo">J_I_N<span class="accent">3D</span></p>
     <div class="footer-socials">
       <a href="https://github.com/yourusername" target="_blank" aria-label="GitHub">
         <i class="fab fa-github"></i>
@@ -261,3 +260,4 @@
 <script src="https://kit.fontawesome.com/yourKitID.js" crossorigin="anonymous"></script>
 </body>
 </html>
+
